bug #15521 (Cannot reorganise a partition with a new name equal to the old name)